--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,7 @@
 }
 
 .page-header {
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/breadcrumb-bg.jpg) center center no-repeat;
     background-size: cover;
 }
 
@@ -572,4 +572,8 @@
 
 .copyright a:hover {
     color: var(--bs-primary);
+}
+
+.bg-grey{
+    background-color: aliceblue;
 }
