--- a/css/style.css
+++ b/css/style.css
@@ -234,10 +234,11 @@
     .carousel .carousel-indicators [data-bs-target] {
         width: 50px;
         height: 50px;
+        display: none;
     }
 
     .carousel .carousel-caption {
-        padding-left: 9rem;
+        padding-left: 1rem;
     }
 }
 
@@ -287,6 +288,11 @@
 /*** Features ***/
 .feature {
     background: linear-gradient(to right, rgba(0, 0, 0, .1), rgba(0, 0, 0, 1) 50%), url(../img/carousel-1.jpg) left center no-repeat;
+    background-size: cover;
+}
+
+.bullet-window{
+    background: linear-gradient(to right, rgba(0, 0, 0, .1), rgba(0, 0, 0, 1) 50%), url(../img/breadcrumb-bg.jpg) left center no-repeat;
     background-size: cover;
 }
 
@@ -390,7 +396,7 @@
 
 /*** Appoinment ***/
 .appoinment {
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/carousel-2.jpg) left center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/carousel/carousel-2.jpg) left center no-repeat;
     background-size: cover;
 }
 
