Changed Breadcrumb Bg

--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@
 }
 
 .page-header {
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/breadcrumb-bg.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/pattern.png) center center no-repeat;
     background-size: cover;
 }
 
